# connect4

./: .gitignore  CMakeLists.txt  OpeningBook.hpp  Position.hpp  best_move.cpp  board_evaluate.cpp  engine.cpp  main.cpp
